<resources>
    <string name="app_name">SmokingCounter</string>
    <string name="app_name_info">Smoking Counter</string>
    <string name="version_info">Version 1.0</string>
    <string name="piece_of_cigarette_has_been_smoked">" Adet Sigara İçilmiş"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TRY">" TRY"</string>
    <string name="today">Bugün</string>
    <string name="total">Toplam</string>
    <string name="today_s_total">Bugünün Toplamı</string>
    <string name="total_is">X adet Sigara, toplam X.X maliyete sebep oldu.</string>
    <string name="detailed_report">Detaylı Rapor</string>
    <string name="detailed_report_loading">Detaylı rapor hazırlanıyor…</string>
    <string name="add">Ekle</string>
    <string name="remove">Çıkart</string>
    <string name="there_is_no_cigarette_left_removable">Çıkarılabilecek ürün kalmadı</string>
    <string name="lacked_from_life">"Ömrünüzden giden dakikalar: "</string>
    <string name="illness">"Sigaranın sebep olduğu hastalıklar: "</string>
    <string name="piece">" Adet sigara için "</string>
    <string name="cost">" ödendi."</string>
    <string name="previoues_cigarettes_that_smoked">"Şuana kadar içilen toplam sigara : "</string>
    <string name="piece_of_smoked">" sigara içildi."</string>
    <string name="minute">" Dakika"</string>
    <string name="cigarette">Sigara</string>
    <string name="for_those_cigarettes">"Bu sigaralar için toplamda "</string>
    <string name="spend">" ödendi."</string>
    <string name="change_for_piece">1 Adet için bedeli değiştirin</string>
    <string name="loading">Yükleniyor</string>
    <string name="price">Fiyat</string>
    <string name="confirm">Onayla</string>
    <string name="clear_all_datas">Tüm verileri temizle</string>
    <string name="new_price_committed">Yeni fiyat kaydedildi</string>
    <string name="new_price_cannot_committed">Yeni fiyat kaydedilemedi !</string>
    <string name="put_price_message">Lütfen 1 adet sigara için fiyatı giriniz</string>
    <string name="please_put_price">Fiyat giriniz</string>
    <string name="all_datas_clear_now">Tüm veriler silindi</string>
</resources>