<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- price settings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center|top"
            android:text="@string/change_for_piece"
            android:textAlignment="gravity"
            android:textColor="@color/main"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/mTextViewCurrentPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/loading"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:textColor="@color/main"
            android:gravity="center|top"/>

        <EditText
            android:id="@+id/mEditTextPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/price"
            android:textAlignment="gravity"
            android:gravity="center|start"
            android:textSize="16sp"
            android:textColor="@color/main"
            android:inputType="numberDecimal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mBtnConfirmSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_general"
            android:text="@string/confirm"
            android:textColor="@color/white"/>

    </LinearLayout>
    <!-- empty view -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>
    <!-- clear all data -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mBtnClearAllDatas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/clear_all_datas"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_general"/>
    <!-- empty view -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

</LinearLayout>