<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:orientation="vertical">

    <!-- Today's layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingBottom="16dp"
        android:background="@drawable/layouts_background_stroke"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/today"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerViewCigarettes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_margin="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mBtnRemoveOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_remove_bg" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mBtnAddOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_add_bg" />

        </LinearLayout>

    </LinearLayout>

    <!-- Total's Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/layouts_background_stroke"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/today_s_total"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/mTextViewTotal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/total_is"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Detailed Report Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/layouts_background_stroke"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/detailed_report"
            android:textAlignment="center"
            android:textColor="@color/accent"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/mTextViewDetailedReport"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/detailed_report_loading"
            android:textAlignment="gravity"
            android:textColor="@color/accent" />

    </LinearLayout>
</LinearLayout>